                            CHANGES version 2.2

                 This file summarizes changes made since 1.0
                 


Version 2.2
-----------
* Detailed error message added to exception. In an exception handler,
  the variable Exception_frame.message, provides an alternative to 
  Connection_getLastError() for obtaining the error message
Bug fixes:
* Fixed Connection_prepareStatement() error reported on a PostgreSQL
  Connection. Thanks to Paul Stevens for bug report.
* MySQL: Fixed error in ResultSet_getBlob() and ResultSet_getString() 
  which lead to a segfault when trying to obtain "large" strings and 
  blobs. Again thanks to Paul Stevens.


Version 2.1
-----------
* API: Connection_ping is promoted to a public method. Clients can use
  this method to test if a Connection is alive.
* API: Connection_clear() is exposed as a public method. Normally it 
  is not necessary to call this method, but in some situations, if you
  use PreparedStatement_executeQuery it is necessary to call this 
  function to close a prepared statement explicit. Basically, if you
  see this SQLite error, "SQL statements in progress", call this 
  function to close any previous opened statements before proceeding.
* Upon returning a Connection, the Connection Pool previously tried to 
  commit a Connection if it was in a non-committed state, while now it
  rollback instead, which is assumed to be more correct. 
* Improved retry when SQLite report database lock, which should reduce
  the chance to meet the infamous SQLite "database is locked" error
* Removed section 3 from "Tildeslash License Exception" so libzdb is 
  licensed clear and permissive.
* Internal optimizing changes 

Version 2.0.2
-----------
* Don't normalize path during URL parsing. If the path needs to be
  normalized it is the responsibility of the caller
* Minor internal changes 
* libzdb is now licensed under GNU General Public License version 3

Version 2.0.1
-----------